cabal-version:      2.4
name:               cardano-swaps
version:            1.0.0.0

synopsis: A distributed Cardano DEX PoC
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2022 fallen-icarus
extra-source-files: 
  CHANGELOG.md,
  aiken/plutus.json,
  preprod-params.json,
  mainnet-params.json

common lang
  build-depends: base ^>=4.14
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints

common internals
  build-depends:
      cardano-api
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-script-utils
    , plutus-core
    , cardano-node-emulator
    , containers

library
  import:
      lang
    , internals
  exposed-modules: 
      CardanoSwaps
    , CardanoSwaps.Blueprints
    , CardanoSwaps.OneWaySwap
    , CardanoSwaps.TwoWaySwap
    , CardanoSwaps.Utils
  build-depends:
      bytestring
    , serialise
    , aeson
    , text
    , file-embed
    , prettyprinter
  hs-source-dirs: src
  ghc-options:
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise

test-suite cardano-swaps-tests
  import: 
    lang,
    internals
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wno-deprecations -Wno-unused-matches
    -Wno-unused-local-binds -Wno-unused-top-binds
  other-modules:
      Test.Internal
    , Test.Config
    , Test.OneWaySwap
    , Test.OneWaySwap.CloseOrUpdate
    , Test.OneWaySwap.CreateSwap
    , Test.OneWaySwap.Swap
    , Test.OneWaySwap.Utils
    , Test.TwoWaySwap
    , Test.TwoWaySwap.CloseOrUpdate
    , Test.TwoWaySwap.CreateSwap
    , Test.TwoWaySwap.Swap
    , Test.TwoWaySwap.Utils
  build-depends:
      cardano-swaps
    , plutus-contract
    , plutus-tx-constraints
    , aeson
    , text
    , data-default
    , tasty
    , lens
    , tasty-hunit

executable cardano-swaps
    import: lang
    main-is: Main.hs
    other-modules:
        CLI.Types
      , CLI.Run
      , CLI.Query
      , CLI.Parsers
      , CLI.Query.Koios
    build-depends:    
      cardano-swaps,
      optparse-applicative,
      servant,
      aeson,
      servant-client,
      http-client,
      http-client-tls,
      text,
      containers,
      vector,
      aeson-pretty,
      bytestring,
      text,
      file-embed,
      prettyprinter,
      prettyprinter-ansi-terminal
    hs-source-dirs: app
    default-extensions:
      OverloadedStrings
      TypeApplications
      RecordWildCards
