cabal-version:      3.0
name:               cardano-swaps
version:            1.0.0.0

synopsis: A distributed Cardano DEX PoC
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2022 fallen-icarus
extra-source-files: 
  CHANGELOG.md,
  aiken/plutus.json,
  preprod-params.json,
  mainnet-params.json

common lang
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    NamedFieldPuns
    NumericUnderscores
    TupleSections
    TypeApplications

common internals
  build-depends:
      cardano-api
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-core
    , plutus-script-utils
    , containers
    , aeson
    , text
    , bytestring
    , prettyprinter

library
  import:
      lang
    , internals
  exposed-modules: 
      CardanoSwaps.Blueprints
    , CardanoSwaps.OneWaySwap
    , CardanoSwaps.TwoWaySwap
    , CardanoSwaps.Utils
  build-depends:
      serialise
    , file-embed
    , base16-bytestring
    , relude
    , microlens
  hs-source-dirs: src

test-suite cardano-swaps-tests
  import: 
    lang,
    internals
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wno-unused-matches -Wno-unused-local-binds 
    -Wno-unused-top-binds
  other-modules:
      Test.Prelude
    , Test.OneWaySwap
    , Test.OneWaySwap.BeaconNames
    , Test.OneWaySwap.CloseSwap
    , Test.OneWaySwap.CreateSwap
    , Test.OneWaySwap.Swap
    , Test.OneWaySwap.UpdateSwap
    , Test.OneWaySwap.UnsafeDatum
    , Test.TwoWaySwap
    , Test.TwoWaySwap.BeaconNames
    , Test.TwoWaySwap.CloseSwap
    , Test.TwoWaySwap.CreateSwap
    , Test.TwoWaySwap.Swap
    , Test.TwoWaySwap.UpdateSwap
    , Test.TwoWaySwap.UnsafeDatum
  build-depends:
      cardano-swaps
    , data-default
    , tasty
    , tasty-hunit
    , microlens
    , mtl
    , cardano-node-emulator

executable cardano-swaps
    import: 
      lang,
      internals
    main-is: Main.hs
    other-modules:
        CLI.Types
      , CLI.Run
      , CLI.Query
      , CLI.Parsers
      , CLI.Query.Koios
    build-depends:    
      cardano-swaps,
      optparse-applicative,
      servant,
      servant-client,
      http-client,
      http-client-tls,
      vector,
      aeson-pretty,
      file-embed,
      prettyprinter-ansi-terminal
    hs-source-dirs: app
    default-extensions:
      OverloadedStrings
      RecordWildCards
